--- a/server/package.json
+++ b/server/package.json
@@ -14,10 +14,9 @@
     "express-graphql": "^0.8.0",
     "graphql": "^14.2.1",
     "graphql-date": "^1.0.3",
-    "http-errors": "~1.6.2",
+    "http-errors": "^1.6.3",
     "jade": "~1.11.0",
-    "mongoose": "^5.5.2",
-    "morgan": "~1.9.0",
-    "touch": "^3.1.0"
+    "mongoose": "^5.5.3",
+    "morgan": "~1.9.0"
   }
 }
